# ocv_sketch

./: CMakeLists.txt  README.md  main_dev1.cpp
inc/: OcvCamera.h
src/: OcvCamera.cpp
